fixed aos layout issue
overflow-x = hidden in container of animation

--- a/css/styles.css
+++ b/css/styles.css
@@ -694,6 +694,7 @@ a {
   max-width: 1140px;
   /* vertical 0, horizontal auto "middle" */
   margin: 0 auto;
+  overflow-x: hidden;
 }
 /* black block */
 .block--black {
